--- a/backend/package.json
+++ b/backend/package.json
@@ -4,6 +4,8 @@
   "description": "",
   "main": "index.ts",
   "scripts": {
+    "build": "tsc",
+    "start": "node build/index.js",
     "develop": "cross-env nodemon --watch './**/*.ts' --exec 'ts-node' --files server.ts",
     "db:seed": "knex seed:run --knexfile knexfile.ts",
     "db:migrate": "knex migrate:latest --knexfile knexfile.ts",
