--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "main": "src/index.ts",
   "scripts": {
     "build": "tsc",
-    "start": "node lib/server.js",
+    "start": "node build/server.js",
     "develop": "cross-env nodemon --watch './**/*.ts' --exec 'ts-node' --files src/server.ts",
     "db:seed": "knex seed:run --knexfile src/knexfile.ts",
     "db:migrate": "knex migrate:latest --knexfile src/knexfile.ts",
