--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,8 @@
     "@types/node": "12.0.2",
     "@types/react": "^16.8.18",
     "@types/react-dom": "16.8.4",
+    "@types/react-redux": "^7.1.0",
+    "@types/redux-actions": "^2.6.1",
     "@types/socket.io-client": "^1.4.32",
     "final-form": "^4.13.1",
     "history": "^4.9.0",
@@ -17,9 +19,12 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-final-form": "^6.0.1",
+    "react-redux": "^7.1.0",
     "react-scripts": "3.0.1",
     "redux": "^4.0.1",
-    "redux-saga": "^1.0.3",
+    "redux-actions": "^2.6.5",
+    "redux-thunk": "^2.3.0",
+    "reselect": "^4.0.0",
     "socket.io-client": "^2.2.0",
     "typescript": "3.4.5"
   },
