--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@types/react-redux": "^7.1.0",
     "@types/redux-actions": "^2.6.1",
     "@types/socket.io-client": "^1.4.32",
+    "alchemy-shared-constants": "file:../shared-constants",
     "final-form": "^4.13.1",
     "history": "^4.9.0",
     "lodash": "^4.17.11",
@@ -32,7 +33,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "preinstall": "npm install ../shared-constants"
   },
   "eslintConfig": {
     "extends": "react-app"
