--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "tsc",
     "start": "node build/server.js",
-    "preinstall": "npm install ../shared-constants",
+    "preinstall": "npm install ../shared",
     "develop": "cross-env nodemon --watch './**/*.ts' --exec 'ts-node' --files src/server.ts",
     "db:seed": "knex seed:run --knexfile knexfile.ts",
     "db:migrate": "knex migrate:latest --knexfile knexfile.ts",
@@ -21,10 +21,14 @@
   "license": "ISC",
   "dependencies": {
     "@types/app-root-path": "^1.2.4",
+    "@types/bluebird": "^3.5.27",
     "@types/express": "^4.16.1",
     "@types/lodash": "^4.14.132",
+    "@types/node": "^12.0.10",
     "@types/sequelize": "^4.28.2",
-    "alchemy-shared-constants": "file:../shared-constants",
+    "@types/socket.io": "^2.1.2",
+    "@types/validator": "^10.11.1",
+    "alchemy-shared": "file:../shared",
     "app-root-path": "^2.2.1",
     "cross-env": "^5.2.0",
     "express": "^4.17.1",
