--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "node ./backend/build/server.js",
     "develop": "concurrently \"npm run develop --prefix backend\" \"PORT=3003 npm run start --prefix frontend\"",
-    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix backend && npm install --prefix frontend && npm run build --prefix frontend && npm run build --prefix backend"
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false && npm run build --prefix frontend && npm run build --prefix backend && npm run build --prefix shared",
+    "install": "npm i --prefix backend && npm i --prefix frontend"
   },
   "author": "",
   "license": "ISC",
@@ -18,5 +19,3 @@
     "npm": "6.4.x"
   }
 }
-
-
