--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "@types/lodash": "^4.14.133",
     "@types/node": "12.0.2",
     "@types/react": "^16.8.18",
+    "@types/react-beautiful-dnd": "^11.0.2",
     "@types/react-dom": "16.8.4",
     "@types/react-redux": "^7.1.0",
     "@types/redux-actions": "^2.6.1",
@@ -18,6 +19,7 @@
     "history": "^4.9.0",
     "lodash": "^4.17.11",
     "react": "^16.8.6",
+    "react-beautiful-dnd": "^11.0.4",
     "react-dom": "^16.8.6",
     "react-final-form": "^6.0.1",
     "react-redux": "^7.1.0",
